--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 </div>
                 <div class="col-6 col-md-3">
                     <div class="skill-card text-center p-4">
-                        <div class="skill-icon"><i class="bi bi-filetype-js"></i></div>
-                        <h5>JavaScript</h5>
+                        <div class="skill-icon"><i class="bi bi-javascript"></i></div>
+                        <h5>NodeJS/Javascript</h5>
                     </div>
                 </div>
                 <div class="col-6 col-md-3">
