Update avatar placeholder to use an image
Replaced avatar placeholder icon with an image.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2 class="section-title text-center mb-5">About Me</h2>
             <div class="row align-items-center">
                 <div class="col-md-4 text-center mb-4">
-                    <div class="avatar-placeholder"><i class="bi bi-person"></i></div>
+                    <div class="avatar-placeholder"><img src="IMG_5489.jpeg"></div>
                 </div>
                 <div class="col-md-8">
                     <p class="fs-5">
