--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="project-card">
                         <div class="project-banner">
-                            <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?w=600&h=300&fit=crop" alt="Project 1">
+                            <img src="IMG_5492.jpeg" alt="Project 1">
                         </div>
                         <div class="project-content p-4">
-                            <h4>Personal Website</h4>
-                            <p>A responsive portfolio website built with HTML, CSS, and JavaScript.</p>
+                            <h4>NotReally.xyz</h4>
+                            <p>At notreally.xyz, we provide reliable subdomain services tailored for static sites. We’re not open to everyone — our platform is intentionally limited, focusing only on selected projects to ensure quality, stability, and a streamlined experience.</p>
                             <div class="project-tags mb-3">
                                 <span class="tag">HTML</span>
                                 <span class="tag">CSS</span>
