--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="project-card">
                         <div class="project-banner">
-                            <img src="IMG_5492.jpeg" alt="Project 1">
+                            <img src="IMG_5492.png" alt="Project 1">
                         </div>
                         <div class="project-content p-4">
                             <h4>NotReally.xyz</h4>
