--- a/index.html
+++ b/index.html
@@ -108,9 +108,6 @@
                             <h4>NotReally.xyz</h4>
                             <p>At notreally.xyz, we provide reliable subdomain services tailored for static sites. We’re not open to everyone — our platform is intentionally limited, focusing only on selected projects to ensure quality, stability, and a streamlined experience.</p>
                             <div class="project-tags mb-3">
-                                <span class="tag">HTML</span>
-                                <span class="tag">CSS</span>
-                                <span class="tag">JS</span>
                             </div>
                             <a href="https://github.com/yourusername/project1" target="_blank" class="btn btn-outline-light btn-sm">
                                 <i class="bi bi-github"></i> View on GitHub
@@ -121,13 +118,12 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="project-card">
                         <div class="project-banner">
-                            <img src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?w=600&h=300&fit=crop" alt="Project 2">
+                            <img src="dym.png" alt="Project 2">
                         </div>
                         <div class="project-content p-4">
-                            <h4>Python Calculator</h4>
-                            <p>A command-line calculator with advanced math functions and history.</p>
+                            <h4>Do You Mean?</h4>
+                            <p>Doyoumean is a prototype that aims to determine the domain address corresponding to a given target word. The system analyzes user inputs and matches the current records over the similarity rate and expands its own database over time.</p>
                             <div class="project-tags mb-3">
-                                <span class="tag">Python</span>
                             </div>
                             <a href="https://github.com/yourusername/project2" target="_blank" class="btn btn-outline-light btn-sm">
                                 <i class="bi bi-github"></i> View on GitHub
