--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 </div>
                 <div class="col-6 col-md-3">
                     <div class="skill-card text-center p-4">
-                        <div class="skill-icon"><i class="bi bi-javascript"></i></div>
-                        <h5>NodeJS/Javascript</h5>
+                        <div class="skill-icon"><i class="bi bi-filetype-js"></i></div>
+                        <h5>NodeJS</h5>
                     </div>
                 </div>
                 <div class="col-6 col-md-3">
@@ -110,7 +110,7 @@
                             <div class="project-tags mb-3">
                             </div>
                             <a href="https://github.com/yourusername/project1" target="_blank" class="btn btn-outline-light btn-sm">
-                                <i class="bi bi-github"></i> View on GitHub
+                                Visit NotReally
                             </a>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                             <p>Doyoumean is a prototype that aims to determine the domain address corresponding to a given target word. The system analyzes user inputs and matches the current records over the similarity rate and expands its own database over time.</p>
                             <div class="project-tags mb-3">
                             </div>
-                            <a href="https://github.com/yourusername/project2" target="_blank" class="btn btn-outline-light btn-sm">
+                            <a href="https://github.com/berlinxr/doyoumean" target="_blank" class="btn btn-outline-light btn-sm">
                                 <i class="bi bi-github"></i> View on GitHub
                             </a>
                         </div>
@@ -134,17 +134,16 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="project-card">
                         <div class="project-banner">
-                            <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?w=600&h=300&fit=crop" alt="Project 3">
+                            <img src="di.png" alt="Project 3">
                         </div>
                         <div class="project-content p-4">
-                            <h4>Weather App</h4>
-                            <p>A weather application that fetches real-time data from an API.</p>
-                            <div class="project-tags mb-3">
-                                <span class="tag">JavaScript</span>
-                                <span class="tag">API</span>
-                            </div>
-                            <a href="https://github.com/yourusername/project3" target="_blank" class="btn btn-outline-light btn-sm">
+                            <h4>Detaylıİnceleme</h4>
+                            <p>Detaylıİnceleme is a Turkish-based platform that provides comprehensive information by compiling detailed analyses and user reviews about games.</p>
+                            <a href="https://github.com/berlinxr/detaylinceleme" target="_blank" class="btn btn-outline-light btn-sm">
                                 <i class="bi bi-github"></i> View on GitHub
+                            </a>
+                            <a href="https://detaylinceleme.berlinxr.cfd" target="_blank" class="btn btn-outline-light btn-sm">
+                                Visit Detaylinceleme
                             </a>
                         </div>
                     </div>
@@ -213,9 +212,9 @@
             <h2 class="section-title mb-4">Get In Touch</h2>
             <p class="mb-4">Feel free to reach out!</p>
             <div class="d-flex justify-content-center gap-4 flex-wrap">
-                <a href="mailto:your@email.com" class="contact-link"><i class="bi bi-envelope"></i> Email</a>
-                <a href="https://github.com/yourusername" target="_blank" class="contact-link"><i class="bi bi-github"></i> GitHub</a>
-                <a href="https://linkedin.com/in/yourusername" target="_blank" class="contact-link"><i class="bi bi-linkedin"></i> LinkedIn</a>
+                <a href="mailto:onur@notreally.xyz" class="contact-link"><i class="bi bi-envelope"></i> Email</a>
+                <a href="https://github.com/berlinxr" target="_blank" class="contact-link"><i class="bi bi-github"></i> GitHub</a>
+                <a href="https://instagram.com/berlinxrf" target="_blank" class="contact-link"><i class="bi bi-instagram"></i> Instagram</a>
             </div>
         </div>
     </section>
@@ -223,7 +222,7 @@
     <!-- Footer -->
     <footer class="py-4 text-center">
         <div class="container">
-            <p class="mb-0 text-muted">© 2024 Your Name. Built with <i class="bi bi-heart-fill text-danger"></i></p>
+            <p class="mb-0 text-muted">© 2025 Onurepbaygun. Built with <i class="bi bi-heart-fill text-danger"></i></p>
         </div>
     </footer>
 
