--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>OnurEpbaygun</title>
     <meta name="description" content="High school student portfolio">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -14,7 +14,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Portfolio</a>
+            <a class="navbar-brand" href="#">X</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,7 +32,7 @@
     <!-- Hero Section -->
     <section id="hero" class="d-flex align-items-center">
         <div class="container text-center">
-            <h1 class="display-3 fw-bold mb-3">Hi, I'm <span class="gradient-text">Your Name</span></h1>
+            <h1 class="display-3 fw-bold mb-3">Hi, I'm <span class="gradient-text">Onur Epbaygun</span></h1>
             <p class="lead mb-4">High School Student • Aspiring Developer</p>
             <a href="#about" class="btn btn-primary btn-lg">Learn More</a>
         </div>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-md-8">
                     <p class="fs-5">
-                        Hello! I'm a high school student passionate about technology and coding. 
+                        Hello! I'm a turkish high school student passionate about technology and coding. 
                         I love building things and learning new skills. When I'm not studying, 
                         you can find me working on personal projects or exploring new technologies.
                     </p>
@@ -151,55 +151,22 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="project-card">
                         <div class="project-banner">
-                            <img src="https://images.unsplash.com/photo-1614680376593-902f74cf0d41?w=600&h=300&fit=crop" alt="Project 4">
+                            <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=600&h=300&fit=crop" alt="Project 4">
                         </div>
                         <div class="project-content p-4">
-                            <h4>To-Do List</h4>
-                            <p>A task management app with local storage for persistence.</p>
+                            <h4>TC Kimlik Kontrol</h4>
+                            <p>A simple Python script that checks the accuracy of Turkish identity numbers.</p>
                             <div class="project-tags mb-3">
                                 <span class="tag">HTML</span>
                                 <span class="tag">CSS</span>
                                 <span class="tag">JS</span>
                             </div>
-                            <a href="https://github.com/yourusername/project4" target="_blank" class="btn btn-outline-light btn-sm">
+                            <a href="https://github.com/berlinxr/tckimlik-kontrol" target="_blank" class="btn btn-outline-light btn-sm">
                                 <i class="bi bi-github"></i> View on GitHub
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
-                    <div class="project-card">
-                        <div class="project-banner">
-                            <img src="https://images.unsplash.com/photo-1493711662062-fa541f7f55a4?w=600&h=300&fit=crop" alt="Project 5">
-                        </div>
-                        <div class="project-content p-4">
-                            <h4>Quiz Game</h4>
-                            <p>An interactive quiz game with scoring and multiple categories.</p>
-                            <div class="project-tags mb-3">
-                                <span class="tag">Python</span>
-                            </div>
-                            <a href="https://github.com/yourusername/project5" target="_blank" class="btn btn-outline-light btn-sm">
-                                <i class="bi bi-github"></i> View on GitHub
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <div class="project-card">
-                        <div class="project-banner">
-                            <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=600&h=300&fit=crop" alt="Project 6">
-                        </div>
-                        <div class="project-content p-4">
-                            <h4>Landing Page</h4>
-                            <p>A modern landing page with animations and responsive design.</p>
-                            <div class="project-tags mb-3">
-                                <span class="tag">HTML</span>
-                                <span class="tag">CSS</span>
-                            </div>
-                            <a href="https://github.com/yourusername/project6" target="_blank" class="btn btn-outline-light btn-sm">
-                                <i class="bi bi-github"></i> View on GitHub
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
