--- a/index.html
+++ b/index.html
@@ -86,8 +86,20 @@
                 </div>
                 <div class="col-6 col-md-3">
                     <div class="skill-card text-center p-4">
-                        <div class="skill-icon"><i class="bi bi-palette"></i></div>
-                        <h5>Design</h5>
+                        <div class="skill-icon"><i class="bi bi-filetype-tsx"></i></div>
+                        <h5>Next.js</h5>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="skill-card text-center p-4">
+                        <div class="skill-icon"><i class="bi bi-filetype-cs"></i></div>
+                        <h5>CSharp</h5>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="skill-card text-center p-4">
+                        <div class="skill-icon"><i class="bi bi-tux"></i></div>
+                        <h5>Linux</h5>
                     </div>
                 </div>
             </div>
