--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="High school student portfolio">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -68,7 +69,7 @@
             <div class="row g-4 justify-content-center">
                 <div class="col-6 col-md-3">
                     <div class="skill-card text-center p-4">
-                        <div class="skill-icon"><i class="bi bi-filetype-html"></i></div>
+                        <div class="skill-icon"><i class="fa-brands fa-html5"></i></div>
                         <h5>HTML/CSS</h5>
                     </div>
                 </div>
