Update skill icons and names in index.html

--- a/index.html
+++ b/index.html
@@ -75,31 +75,25 @@
                 </div>
                 <div class="col-6 col-md-3">
                     <div class="skill-card text-center p-4">
-                        <div class="skill-icon"><i class="bi bi-filetype-js"></i></div>
+                        <div class="skill-icon"><i class="fa-brands fa-node-js"></i></div>
                         <h5>NodeJS</h5>
                     </div>
                 </div>
                 <div class="col-6 col-md-3">
                     <div class="skill-card text-center p-4">
-                        <div class="skill-icon"><i class="bi bi-filetype-py"></i></div>
+                        <div class="skill-icon"><i class="fa-brands fa-python"></i></div>
                         <h5>Python</h5>
                     </div>
                 </div>
                 <div class="col-6 col-md-3">
                     <div class="skill-card text-center p-4">
-                        <div class="skill-icon"><i class="bi bi-filetype-tsx"></i></div>
-                        <h5>Next.js</h5>
+                        <div class="skill-icon"><i class="fa-brands fa-react"></i></div>
+                        <h5>React</h5>
                     </div>
                 </div>
                 <div class="col-6 col-md-3">
                     <div class="skill-card text-center p-4">
-                        <div class="skill-icon"><i class="bi bi-filetype-cs"></i></div>
-                        <h5>CSharp</h5>
-                    </div>
-                </div>
-                <div class="col-6 col-md-3">
-                    <div class="skill-card text-center p-4">
-                        <div class="skill-icon"><i class="bi bi-tux"></i></div>
+                        <div class="skill-icon"><i class="fa-brands fa-linux"></i></div>
                         <h5>Linux</h5>
                     </div>
                 </div>
