--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="hero" class="d-flex align-items-center">
         <div class="container text-center">
             <h1 class="display-3 fw-bold mb-3">Hi, I'm <span class="gradient-text">Onur Epbaygun</span></h1>
-            <p class="lead mb-4">High School Student • Aspiring Developer</p>
+            <p class="lead mb-4">High School Student • Amateur Developer</p>
             <a href="#about" class="btn btn-primary btn-lg">Learn More</a>
         </div>
     </section>
@@ -117,7 +117,7 @@
                             <div class="project-tags mb-3">
                             </div>
                             <a href="https://github.com/yourusername/project1" target="_blank" class="btn btn-outline-light btn-sm">
-                                Visit NotReally
+                                <i class="fa-solid fa-earth-americas"></i> Visit NotReally
                             </a>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                                 <i class="bi bi-github"></i> View on GitHub
                             </a>
                             <a href="https://detaylinceleme.berlinxr.cfd" target="_blank" class="btn btn-outline-light btn-sm">
-                                Visit Detaylinceleme
+                                <i class="fa-solid fa-earth-americas"></i> Visit Detaylinceleme
                             </a>
                         </div>
                     </div>
